# scitex-db

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cla.yml  docs.yml  publish-pypi.yml  test.yml
docs/sphinx/: conf.py  index.rst
examples/: 01_basic.py
src/scitex_db/: __init__.py  __main__.py  _delete_duplicates.py  _skills.py  _utils.py
src/scitex_db/_BaseMixins/: _BaseTransactionMixin.py
src/scitex_db/_postgresql/: _PostgreSQL.py
src/scitex_db/_skills/: SKILL.md  postgresql-usage.md  postgresql.md  sqlite3-usage.md  sqlite3.md  utilities.md
src/scitex_db/_skills/scitex-db/: 01_installation.md  01_quick-start.md  02_python-api.md  02_quick-start.md  03_mixins.md  03_python-api.md  04_cli-reference.md  04_numpy-blob.md  05_maintenance.md  10_cli-reference.md  11_quick-start.md  13_mixins.md  14_numpy-blob.md  SKILL.md  postgresql-usage.md  sqlite3-usage.md  utilities.md
src/scitex_db/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_db/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree
src/scitex_db/_sphinx_html/.doctrees/api/: scitex_db.doctree
src/scitex_db/_sphinx_html/_modules/: index.html
src/scitex_db/_sphinx_html/_modules/scitex_db/: _delete_duplicates.html  _inspect.html
src/scitex_db/_sphinx_html/_modules/scitex_db/_postgresql/: _PostgreSQL.html
src/scitex_db/_sphinx_html/_modules/scitex_db/_sqlite3/: _SQLite3.html  _delete_duplicates.html
src/scitex_db/_sphinx_html/_sources/: installation.rst.txt
src/scitex_db/_sphinx_html/_sources/api/: scitex_db.rst.txt
src/scitex_db/_sphinx_html/api/: scitex_db.html
src/scitex_db/_sqlite3/: _SQLite3.py
src/scitex_db/_sqlite3/_SQLite3Mixins/: _ArrayMixin.py  _ArrayMixin_v01-need-_hash-col.py  _ColumnMixin.py  _ColumnMixin_v01-indentation-issues.py  _ImportExportMixin.py  _MaintenanceMixin.py  _QueryMixin.py  _TransactionMixin.py
tests/: test___main__.py  test__check_health.py  test__delete_duplicates.py  test__inspect.py  test__inspect_optimized.py
tests/_BaseMixins/: test__BaseBackupMixin.py  test__BaseBatchMixin.py  test__BaseBlobMixin.py  test__BaseConnectionMixin.py  test__BaseImportExportMixin.py  test__BaseIndexMixin.py  test__BaseMaintenanceMixin.py  test__BaseQueryMixin.py  test__BaseRowMixin.py  test__BaseSchemaMixin.py  test__BaseTableMixin.py  test__BaseTransactionMixin.py
tests/_postgresql/: test__PostgreSQL.py
tests/_postgresql/_PostgreSQLMixins/: test__BackupMixin.py  test__BatchMixin.py  test__BlobMixin.py  test__ConnectionMixin.py  test__ImportExportMixin.py  test__IndexMixin.py  test__MaintenanceMixin.py  test__QueryMixin.py  test__RowMixin.py  test__SchemaMixin.py  test__TableMixin.py  test__TransactionMixin.py
tests/_sqlite3/: test__SQLite3.py  test__delete_duplicates.py
tests/_sqlite3/_SQLite3Mixins/: test__ArrayMixin.py  test__BatchMixin.py  test__BlobMixin.py  test__ColumnMixin.py  test__ConnectionMixin.py  test__GitMixin.py  test__ImportExportMixin.py  test__IndexMixin.py  test__MaintenanceMixin.py  test__QueryMixin.py  test__RowMixin.py  test__TableMixin.py  test__TransactionMixin.py
tests/integration/: test_cross_package_imports.py
