[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-db"
version = "0.1.3"
description = "Database utilities for scientific computing with SQLite3 and PostgreSQL"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = [
    "database",
    "sqlite3",
    "postgresql",
    "scientific-computing",
    "numpy-arrays",
    "data-storage"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "pandas",
    "scitex-core>=0.1.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary",
    "sqlalchemy",
]

git = [
    "GitPython",
]

all = [
    "psycopg2-binary",
    "sqlalchemy",
    "GitPython",
]

dev = [
    "scitex-dev",
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
scitex-db = "scitex_db.__main__:main"

[project.entry-points."scitex_dev.docs"]
scitex-db = "scitex_db"

[project.entry-points."scitex_dev.skills"]
scitex-db = "scitex_db"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-db"
Repository = "https://github.com/ywatanabe1989/scitex-db.git"
Issues = "https://github.com/ywatanabe1989/scitex-db/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=scitex_db --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
